--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
-    "rollback": "knex migrate:rollback"
+    "rollback": "knex migrate:rollback",
+    "seed": "knex seed:run"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "knex": "^2.0.0",
-    "sqlite": "^4.0.25"
+    "sqlite": "^4.0.25",
+    "sqlite3": "^5.0.5"
   }
 }
